--- a/EliminaCodeServer/pom.xml
+++ b/EliminaCodeServer/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>vlcj</artifactId>
 			<version>2.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>15.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
