--- a/EliminaCodeServer/src/META-INF/jdbcDerby.properties
+++ b/EliminaCodeServer/src/META-INF/jdbcDerby.properties
@@ -1,6 +1,6 @@
-uri = jdbc:mysql://localhost/eliminacode/
-username = root
-password = alessio
-driver = com.mysql.jdbc.Driver
+uri = jdbc:derby://localhost:1527/Y:/eliminacode/db/eliminacode3;create=true
+username = app
+password = app
+driver = org.apache.derby.jdbc.ClientDriver
 uri_client = jdbc:derby://localhost:1527//Y:/eliminacode/db/eliminacode2;create=true
 uri_server = jdbc:derby://localhost:1527//home/alessio/Shared/eliminacode/db/eliminacode3;create=true
