--- a/EliminaCodeServer/pom.xml
+++ b/EliminaCodeServer/pom.xml
@@ -57,6 +57,12 @@
 			<artifactId>jaxen</artifactId>
 			<version>1.1.6</version>
 		</dependency>
+		<dependency>
+	<groupId>com.miglayout</groupId>
+	<artifactId>miglayout</artifactId>
+	<version>4.2</version>
+</dependency>
+            
 
 
 	</dependencies>
