--- a/EliminaCodeServer/pom.xml
+++ b/EliminaCodeServer/pom.xml
@@ -62,8 +62,23 @@
 			<artifactId>miglayout-swing</artifactId>
 			<version>4.2</version>
 		</dependency>
-
-
+<dependency>
+      <groupId>org.jasypt</groupId>
+      <artifactId>jasypt</artifactId>
+      <version>1.9.2</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>eclipselink</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>javax.persistence</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		
 
 	</dependencies>
 
